2020-12-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (struct pk_color): New type.
	(struct pk_term_if): Remove rgb_to_color_fn and modify get_(bg)color_fn
	and set_(bg)color_fn to handle terminal colors.
	* testsuite/poke.libpoke/term-if.h: Adapt to new API.

2020-12-31  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (dispose_active_classes): Remove unneeded
	function.
	(pk_term_shutdown): Use pop_active_class instead of
	dispose_active_classes.

2020-12-30  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-term.c (pop_active_class): Return a status code.
	(pk_term_end_class): Adapt to new interface.

2020-12-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (struct pk_term_if): Change end_class_fn
	prototype to return an error code.
	* poke/pk-term.c (pk_term_end_class): Likewise.
	(dispose_active_classes): New function.
	(push_active_class): Likewise.
	(pop_active_class): Likewise.
	(pk_term_class): Push the class.
	(pk_term_end_class): Check for the class, then pop it.
	* testsuite/poke.libpoke/term-if.h (pk_term_end_class): Likewise.
	* libpoke/pvm.jitter (endsc): Raise an exception if the given
	class is invalid.
	* testsuite/poke.pkl/term-class-1.pk: New test.
	* testsuite/poke.pkl/term-class-2.pk: Likewise.
	* testsuite/poke.pkl/term-class-3.pk: Likewise.
	* testsuite/poke.pkl/term-hl-1.pk: Likewise.
	* testsuite/poke.pkl/term-hl-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_val_initialize): New function.
	(string_value): New variable.
	(void_type): Likewise.
	(any_type): Likewise.
	(pvm_make_string_type): Reuse unitary value.
	(pvm_make_void_type): Likewise.
	(pvm_make_any_type): Likewise.
	(pvm_val_finalize): Likewise.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (@:.vm profile): New section.

2020-12-29  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org (Building with profiling support): New section.