@@ -457,7 +457,6 @@ PKL_DEF_INSN(PKL_INSN_POPOAC,"","popoac")
 PKL_DEF_INSN(PKL_INSN_PUSHOPP,"","pushopp")
 PKL_DEF_INSN(PKL_INSN_POPOPP,"","popopp")
 
-PKL_DEF_INSN(PKL_INSN_RGBTOC,"","rgbtoc")
 PKL_DEF_INSN(PKL_INSN_PUSHOC,"","pushoc")
 PKL_DEF_INSN(PKL_INSN_POPOC,"","popoc")
 PKL_DEF_INSN(PKL_INSN_PUSHOBC,"","pushobc")
