@@ -259,8 +259,6 @@ S ::
    if (yyextra->bootstrapped) REJECT; return BUILTIN_TERM_BEGIN_CLASS; }
 "__PKL_BUILTIN_TERM_END_CLASS__" {
    if (yyextra->bootstrapped) REJECT; return BUILTIN_TERM_END_CLASS; }
-"__PKL_BUILTIN_TERM_RGB_TO_COLOR__" {
-   if (yyextra->bootstrapped) REJECT; return BUILTIN_TERM_RGB_TO_COLOR; }
 "__PKL_BUILTIN_TERM_GET_COLOR__" {
    if (yyextra->bootstrapped) REJECT; return BUILTIN_TERM_GET_COLOR; }
 "__PKL_BUILTIN_TERM_SET_COLOR__" {
