@@ -2017,7 +2017,6 @@ builtin:
         | BUILTIN_FORGET        { $$ = PKL_AST_BUILTIN_FORGET; }
         | BUILTIN_GET_TIME      { $$ = PKL_AST_BUILTIN_GET_TIME; }
         | BUILTIN_STRACE        { $$ = PKL_AST_BUILTIN_STRACE; }
-        | BUILTIN_TERM_RGB_TO_COLOR { $$ = PKL_AST_BUILTIN_TERM_RGB_TO_COLOR; }
         | BUILTIN_TERM_GET_COLOR { $$ = PKL_AST_BUILTIN_TERM_GET_COLOR; }
         | BUILTIN_TERM_SET_COLOR { $$ = PKL_AST_BUILTIN_TERM_SET_COLOR; }
         | BUILTIN_TERM_GET_BGCOLOR { $$ = PKL_AST_BUILTIN_TERM_GET_BGCOLOR; }
